# thesis_robot

./: README.md
laser_scan_matcher/: CMakeLists.txt
laser_scan_matcher/src/: laser_scan_matcher_odom.cpp
realsense2_camera/: CMakeLists.txt  nodelet_plugins.xml  package.xml
realsense2_camera/src/: base_realsense_node.cpp  realsense_node_factory.cpp
robot_explorer/launch/: frontier_explorer.launch  hector_explorer.launch  robot_prometheus_frontier_explorer.launch  robot_prometheus_frontier_explorer.launch.save  test.launch
robot_explorer/rviz/: robot_prometheus_frontier_explorer.rviz
robot_navigation/: CMakeLists.txt
robot_navigation/launch/: amcl.launch  move_base.launch  robot_navigation.launch
robot_navigation/map_backup/: map.pgm  map.yaml
robot_navigation/maps/: .pgm  .yaml  map.pgm  map.yaml
robot_navigation/param/: costmap_common_params.yaml  costmap_common_params_copy.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
thesis_robot_bringup/: CMakeLists.txt  package.xml
thesis_robot_modeling/: CMakeLists.txt  package.xml
thesis_robot_modeling/config/: rviz_config.rviz
thesis_robot_modeling/launch/: display.launch  gazebo.launch
thesis_robot_modeling/meshes/: caster_wheel_link.STL  imu_link.STL  left_wheel_link.STL  lidar_link.STL  realsense_link.STL  right_wheel_link.STL
thesis_robot_modeling/urdf/: thesis_robot_modeling.csv  thesis_robot_modeling.gazebo.xacro  thesis_robot_modeling.urdf  thesis_robot_modeling.urdf.xacro
thesis_robot_rosserial/: CMakeLists.txt  package.xml
thesis_robot_rosserial/src/: serial_node.py
thesis_robot_rosserial/src/rosserial_client/: Serial_Client.py  __init__.py
thesis_robot_teleop/: CMakeLists.txt  package.xml
thesis_robot_test/: CMakeLists.txt  package.xml
(+43 files in other folders)
