<?xml version="1.0"?>

<package format="2">
  <name>thesis_robot_modeling</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for thesis_robot_modeling</p>
    <p>This package contains configuration data, 3D models and launch files
for thesis_robot_modeling robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>rospack</depend>
  <export>
    <architecture_independent />
  </export>
</package>